Change log for zeit.web
=======================

2.71 (unreleased)
-----------------

- ZON-1626: Update ZMO-CPs to the z.c.cp-3.x data model,
            update CSS and templates to the ZON best practises

- ZON-2878: Allow specifying a background color for teaser images with
            transparent backgrounds


2.70 (2016-04-11)
-----------------

- FIX: Handle non-ascii usernames in nojs comment form

- BUG-346: Limit the number of items in jobbox

- BUG-385: Consider paragraph length when inserting ads

- ZON-2494: Implement stoa in-article-block

- ZON-2870: Implement login cut mark for framebuilder

- ZON-2651: Include SSO information in the JS rawr config object

- ZON-2890: Add packshot with follow-us button and subscription box

- ZON-2930: Add separate feed `rss-socialflow-facebook-zco`

- ZON-2913: Display ads in ZETT parquet

- ZON-2946: Hide infobox tab counter for single tabs

- FIX: Be more defensive in several places (Bugsnag)


2.69 (2016-04-04)
-----------------

- MAINT: Add a11y to table of contents

- ZON-2893: Support all content blocks in ZEIT Campus articles

- ZON-2776: Implement 2nd version of ZCO topic teaser and refactor standard
  topic teaser

- ZON-2889: Add new graphical topic teaser


2.68 (2016-03-31)
-----------------

- ZON-2522: Move comments to core

- MAINT: Use trio area consistently

- MAINT: Fix Campus teaser headlines + padding

- FIX: Fix subcomment counting

- FIX: Fix subcomment deeplinks


2.67 (2016-03-30)
-----------------

- BUG-381: Use empty pixel instead of ZON-Logo in AMP-Ads

- BUG-379: Framebuilder: Set Webtrekk params via JS


2.66.2 (2016-03-24)
-------------------

- HOTFIX: Use correct agatho API call for recommendations

- HOTFIX: Calculate current page for deeplink


2.66.1 (2016-03-24)
-------------------

- HOTFIX: Fix comment numbering in pagination

- HOTFIX: Use fallback for C1 setting to avoid script syntax error


2.66 (2016-03-23)
-----------------
